<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rx_service_tools</name>
  <version>1.0.2</version>
  <description>Graphical tools to interact with ROS services.</description>

  <maintainer email="tim.clephas@nobleo.nl">Tim Clephas</maintainer>
  <author email="ahosseini@synapticon.com">Alireza Hosseini</author>
  <author email="fwidmaier@synapticon.com">Felix Widmaier</author>

  <license>BSD</license>

  <url type="repository">https://github.com/nobleo/rx_service_tools</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>wxpython</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-argparse</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>

  <export>
  </export>
</package>
